# QuadTree

./: CMakeLists.txt  README.md  mesh_quadtree.cpp
example/: triangle.msh  wing.msh
include/: Cell.hpp  GeometryBoundary.hpp  QuadTree.hpp  utils.hpp
src/: GeometryBoundary.cpp  QuadTree.cpp  utils.cpp
